--- a/styles/etk.scss
+++ b/styles/etk.scss
@@ -1,7 +1,7 @@
 ---
 ---
 @import "bootstrap";
-@import url('http://fonts.googleapis.com/css?family=Didact+Gothic');
+@import url('https://fonts.googleapis.com/css?family=Didact+Gothic');
 @import url('https://fonts.googleapis.com/css?family=Roboto');
 
 .orange-embossed{
