--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -8,6 +8,15 @@
   <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
   <title>{{ page.title }}</title>
   {% include head.html %}
+  <!-- for mathjax support -->
+  {% if page.usemathjax %}
+  <script type="text/x-mathjax-config">
+    MathJax.Hub.Config({
+    TeX: { equationNumbers: { autoNumber: "AMS" } }
+    });
+  </script>
+  <script type="text/javascript" async src="http://cdn.mathjax.org/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
+  {% endif %}
 </head>
 <body id="index">
   {% include navbar.html %}
