footer: add last updated time at least for devel period

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,4 +10,5 @@ The Einstein Toolkit has been supported by NSF
 {%-endfor-%}.
 Any opinions, findings, and conclusions or recommendations expressed in this material
 are those of the author(s) and do not necessarily reflect the views of the National Science Foundation.
+Site last updated: {{site.time}}
 </div>
