--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,9 +17,9 @@
 <body id="index">
   {% include navbar.html %}
   <div class="container">
-    <div class="row">
+    {% unless page.manualrow %}<div class="row">{% endunless %}
 {{ content }}
-    </div>
+    {% unless page.manualrow %}</div>{% endunless %}
   </div>
   <div class="container">
     <div class="row">
