--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -3,8 +3,8 @@
 <nav id="nav" class="navbar navbar-inverse navbar-fixed-top" data-nav-helper="true">
   <div id="menu" class="container">
   <div  class="navbar-header">
-      <a class="navbar-brand" href="{{base}}/index.html"><img class="logo" src="{{base}}/images/logo/einstein_right.svg" alt="Einstein"></a>
-      <a class="navbar-brand" href="{{base}}/index.html">
+      <a class="navbar-brand" href="https://www.einsteintoolkit.org"><img class="logo" src="{{base}}/images/logo/einstein_right.svg" alt="Einstein"></a>
+      <a class="navbar-brand" href="https://www.einsteintoolkit.org">
         <div>
           <span class="orange-embossed">einstein</span><br/>
           <span class="white-flat">toolkit</span>
