navbar: make logic for location highlight more consistent

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -22,11 +22,11 @@
 
     <ul class="nav navbar-nav">
       <li ><a class="main-menu {% if page.url == '/' %}main-menu-active{% endif %}" href="{{base}}/index.html">Home</a></li>
-      <li ><a class="main-menu {% if page.url contains '/about.html' %}main-menu-active{% endif %}" href="{{base}}/about.html">About</a></li>
-      <li ><a class="main-menu {% if page.url contains '/program.html' %}main-menu-active{% endif %}" href="{{base}}/program.html">Program</a></li>
-      <li ><a class="main-menu {% if page.url contains '/instructions.html' %}main-menu-active{% endif %}" href="{{base}}/instructions.html">Instructions</a></li>
-      <li ><a class="main-menu {% if page.url contains '/participants.html' %}main-menu-active{% endif %}" href="{{base}}/participants.html">Participants</a></li>
-      <li ><a class="main-menu {% if page.url contains '/register.html' %}main-menu-active{% endif %}" href="{{base}}/register.html">Register!</a></li>
+      <li ><a class="main-menu {% if page.url == '/about.html' %}main-menu-active{% endif %}" href="{{base}}/about.html">About</a></li>
+      <li ><a class="main-menu {% if page.url == '/program.html' %}main-menu-active{% endif %}" href="{{base}}/program.html">Program</a></li>
+      <li ><a class="main-menu {% if page.url == '/instructions.html' %}main-menu-active{% endif %}" href="{{base}}/instructions.html">Instructions</a></li>
+      <li ><a class="main-menu {% if page.url == '/participants.html' %}main-menu-active{% endif %}" href="{{base}}/participants.html">Participants</a></li>
+      <li ><a class="main-menu {% if page.url == '/register.html' %}main-menu-active{% endif %}" href="{{base}}/register.html">Register!</a></li>
     </ul>
   </div>
   </div>
