--- a/css/etk.css
+++ b/css/etk.css
@@ -14,6 +14,14 @@ p {
   max-width: 52em; /* 2 alphabets */
 }
 
+td :first-child {
+  margin-top: 0px;
+}
+
+td :last-child {
+  margin-bottom: 0px;
+}
+
 .logo img {
     float: left;
     margin: 5px;
