program: use raggedright paragraph layout in tables
this avoids very large whitespace if the browsers justifies a multi-line
title with long words in it or multi-line author lists

--- a/css/etk.css
+++ b/css/etk.css
@@ -175,6 +175,10 @@ a:hover {
   border-style: solid;
 }
 
+.schedule p {
+  text-align: inherit;
+}
+
 /* no linebreaks in times */
 .day-schedule tr:nth-child(n+1) td:nth-child(-n+2) {
   white-space: nowrap;
@@ -188,6 +192,10 @@ a:hover {
   /* remove these once the layout looks ok */
   border-width: 1px;
   border-style: solid;
+}
+
+.day-schedule p {
+  text-align: inherit;
 }
 
 #participants {
