--- a/css/etk.css
+++ b/css/etk.css
@@ -14,6 +14,10 @@ p {
   max-width: 52em; /* 2 alphabets */
 }
 
+pre {
+  max-width: 52em; /* 2 alphabets */
+}
+
 td :first-child {
   margin-top: 0px;
 }
