navbar: remove register tab

--- a/_includes/navbar.html
+++ b/_includes/navbar.html
@@ -38,7 +38,7 @@ window.onload = function () {
       <li ><a class="main-menu {% if page.url == '/program.html' %}main-menu-active{% endif %}" href="{{base}}/program.html">Program</a></li>
       <li ><a class="main-menu {% if page.url == '/instructions.html' %}main-menu-active{% endif %}" href="{{base}}/instructions.html">Instructions</a></li>
       <li ><a class="main-menu {% if page.url == '/participants.html' %}main-menu-active{% endif %}" href="{{base}}/participants.html">Participants</a></li>
-      <li ><a class="main-menu {% if page.url == '/register.html' %}main-menu-active{% endif %}" href="{{base}}/register.html">Register</a></li>
+      <!--<li ><a class="main-menu {% if page.url == '/register.html' %}main-menu-active{% endif %}" href="{{base}}/register.html">Register</a></li>-->
     </ul>
   </div>
   </div>
